Fix dune files, export libraries
Signed-off-by: Christian Lindig <christian.lindig@citrix.com>

--- a/lib/dune
+++ b/lib/dune
@@ -1,6 +1,7 @@
 
 (library
- (name            stubs)
+ (name            polly)
+ (public_name     polly)
  (wrapped         false)
  (libraries       unix)
  (c_names         epoll_stubs))
