--- a/src/dune
+++ b/src/dune
@@ -1,6 +1,6 @@
 
 (executable
  (name main)
- (public_name polly)
- (libraries cmdliner stubs))
+ (public_name "polly-test")
+ (libraries cmdliner polly))
 
