Add bse-unix dependency to opam file
Signed-off-by: Christian Lindig <christian.lindig@citrix.com>

--- a/polly.opam
+++ b/polly.opam
@@ -11,6 +11,8 @@ build: [
 ]
 depends: [
   "dune"    {build}
+  "ocaml"
 	"cmdliner"
+  "base-unix"
 ]
 synopsis: "Bindings for the Linux epoll system call"
