Use Dune 2.0, reformat
Signed-off-by: Christian Lindig <christian.lindig@citrix.com>

--- a/dune
+++ b/dune
@@ -1,20 +1,9 @@
 (env
  (gprof
   (ocamlopt_flags
-   (:standard -g -p)
-  )
-  (flags
-   (:standard)
-  )
- )
+   (:standard -g -p))
+  (flags (:standard)))
  (dev
-  (flags
-   (:standard)
-  )
- )
+  (flags (:standard)))
  (release
-  (flags
-   (:standard)
-  )
- )
-)
+  (flags (:standard))))
