Fix polly.opam file
Signed-off-by: Christian Lindig <christian.lindig@citrix.com>

--- a/polly.opam
+++ b/polly.opam
@@ -17,5 +17,5 @@ depends: [
   "cmdliner"
   "base-unix"
 ]
-build: ["dune" "build" "-j" jobs "@install"]
+build: ["dune" "build" "-p" name "-j" jobs "@install"]
 dev-repo: "git://github.com/lindig/polly.git"
