--- a/polly.opam
+++ b/polly.opam
@@ -16,7 +16,7 @@ depends: [
   "ocaml"
   "cmdliner"
   "base-unix"
+  "conf-linux-libc-dev"
 ]
 build: ["dune" "build" "-p" name "-j" jobs "@install"]
-depexts: "conf-linux-libc-dev"
 dev-repo: "git://github.com/lindig/polly.git"
