--- a/polly.opam
+++ b/polly.opam
@@ -1,5 +1,4 @@
 opam-version: "2.0"
-name: "polly"
 synopsis: "Bindings for the Linux epoll system call"
 description: """
 Bindings for the Linux epoll system call. The binding avoids
@@ -12,7 +11,7 @@ homepage: "https://github.com/lindig/polly"
 doc: "https://github.com/lindig/polly"
 bug-reports: "https://github.com/lindig/polly/issues"
 depends: [
-  "dune" {build}
+  "dune" {>= "2.0"}
   "ocaml"
   "cmdliner"
   "base-unix"
