--- a/polly.opam
+++ b/polly.opam
@@ -13,7 +13,7 @@ bug-reports: "https://github.com/lindig/polly/issues"
 depends: [
   "dune" {>= "2.0"}
   "ocaml"
-  "cmdliner"
+  "cmdliner" {>= "1.1.0"}
   "base-unix"
   "conf-linux-libc-dev"
 ]
