--- a/polly.opam
+++ b/polly.opam
@@ -4,8 +4,8 @@ description: """
 Bindings for the Linux epoll system call. The binding avoids
   most allocation in the event loop by iterating over all file
   descriptors that are reported as ready."""
-maintainer: "Christian Lindig <christian.lindig@citrix.com>"
-authors: "Christian Lindig <christian.lindig@citrix.com>"
+maintainer: "Christian Lindig <christian.lindig@cloud.com>"
+authors: "Christian Lindig <christian.lindig@cloud.com>"
 license: "MIT"
 homepage: "https://github.com/lindig/polly"
 doc: "https://github.com/lindig/polly"
