--- a/polly.opam
+++ b/polly.opam
@@ -1,9 +1,9 @@
 opam-version: "2.0"
 synopsis: "Bindings for the Linux epoll system call"
-description: """
+description: """\
 Bindings for the Linux epoll system call. The binding avoids
-  most allocation in the event loop by iterating over all file
-  descriptors that are reported as ready."""
+most allocation in the event loop by iterating over all file
+descriptors that are reported as ready."""
 maintainer: "Christian Lindig <christian.lindig@cloud.com>"
 authors: "Christian Lindig <christian.lindig@cloud.com>"
 license: "MIT"
