compile time constants generated from a small C file

--- a/lib/dune
+++ b/lib/dune
@@ -5,3 +5,12 @@
  (foreign_stubs
   (language c)
   (names polly_stubs)))
+
+(rule
+ (targets constants.ml)
+ (deps
+  (:bin ../src/constants.exe))
+ (action
+  (with-stdout-to
+   %{targets}
+   (run %{bin}))))
